extract text from image

--- a/Templates/Login.html
+++ b/Templates/Login.html
@@ -53,6 +53,7 @@
                             <div class="button input-box">
                                 <input type="submit" value="Login" class="submit-btn">
                             </div>
+                            <span>Don't have an account</span> <a href="/signup" style="color: black;"><b>signup here</b></a>
                             {% if error %}
                             <div class="error">{{ error }}</div>
                             {% endif %}
