--- a/Templates/Signup.html
+++ b/Templates/Signup.html
@@ -57,6 +57,7 @@
                             <div class="button input-box">
                                 <input type="submit" value="Sign Up" class="submit-btn">
                             </div>
+                            <span>Already have an account</span> <a href="/login" style="color: black;"><b>login here</b></a>
                             {% if error %}
                             <div class="error">{{ error }}</div>
                             {% endif %}
