loader in template

--- a/Templates/submit.html
+++ b/Templates/submit.html
@@ -204,8 +204,8 @@
             {% endif %}
 
             <div class="button-area">
-               <button type="submit">Submit</button>
-               <button onclick="goBack()" type="button" style="margin-left: 10px; margin-top: 10px;">Cancel</button>
+               <button type="submit" style="margin-bottom: 10px;">Submit</button>
+               <button onclick="goBack()" type="button" style="margin-left: 10px;">Cancel</button>
             </div>
 
         </form>
