--- a/Templates/index.html
+++ b/Templates/index.html
@@ -11,6 +11,30 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="static/Images/ocr.png" type="/static/Images/ocr.png" sizes="16x16">
+
+    <style>
+        .loader {
+            border: 4px solid #f3f3f3;
+            border-radius: 50%;
+            border-top: 4px solid #3498db;
+            width: 30px;
+            height: 30px;
+            -webkit-animation: spin 2s linear infinite; /* Safari */
+            animation: spin 2s linear infinite;
+            display: none; /* Initially hidden */
+        }
+    
+        @-webkit-keyframes spin {
+            0% { -webkit-transform: rotate(0deg); }
+            100% { -webkit-transform: rotate(360deg); }
+        }
+    
+        @keyframes spin {
+            0% { transform: rotate(0deg); }
+            100% { transform: rotate(360deg); }
+        }
+    </style>
+
 </head>
 
 <body>
@@ -125,9 +149,9 @@
                                     <input type="file" name="chooseFile" id="chooseFile">
                                 </div>
                             </div> -->
-                            <div class="button input-box">
-                                <!-- <a href="submit.html" class="submit-btn">Submit</a> -->
-                                <input type="submit" value="Submit" class="submit-btn"> 
+                            <div class="button input-box" style="position: relative;">
+                                <input type="submit" value="Submit" class="submit-btn" onclick="showLoader()"> 
+                                <span style="position: absolute; right: 35%;" class="loader" id="loader"></span>
                             </div>
                         </div>
                     </form>
@@ -135,6 +159,20 @@
             </div>
         </div>
     </div>
+
+
+    <script>
+        function showLoader() {
+            document.getElementById('loader').style.display = 'block'; // Show loader
+        }
+    
+        // Event listener to hide the loader when the page finishes loading
+        window.addEventListener('load', hideLoader);
+    
+        function hideLoader() {
+            document.getElementById('loader').style.display = 'none'; // Hide loader
+        }
+    </script>
 
 
     <script>
